# STINTSYMCO1

./: .gitignore  README.md  RUNTHIS_MAC.sh  RUNTHIS_WINDOWS.bat  pyproject.toml  setup.ps1
.github/: copilot-instructions.md  specifications.md
NeuralNetworkModel/: FractureDataset.py  NN.ipynb  train.py
notebook/: DATASET_SETUP.md  EDA.ipynb  KNN_Classifier.ipynb  KNN_Classifier_Augmented.ipynb  Prediction_8s.ipynb  README_STINTSY.md  SVM_Classifier.ipynb  SVM_Classifier_Augmented.ipynb  Train_8s.ipynb  augment_with_labels.py  augmentation_setup.ipynb  data.yaml  fractured_augmentation.ipynb  organize.py  organize_dataset.py
scripts/: augment_with_labels.py  organize_dataset.py
