[project]
name = "stintsymco1"
version = "0.1.0"
description = "Analysis of X-ray images. Binary Classification between Fractured / Non-fractured "
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "albumentations>=2.0.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.19",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true